<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_default">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="4dp"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Criar conta"
                    android:textColor="@color/white"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="16dp" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/txt_email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/EditTextTheme"
                android:hint="@string/txt_digite_seu_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:inputType="textEmailAddress"
                android:textSize="16dp"
                android:text="@string/txt_senha"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/EditTextTheme"
                android:hint="@string/txt_digite_sua_senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/ButtomTheme"
                android:text="@string/text_button_register_login_fragment"
                app:backgroundTint="@null" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>